@@ -30,11 +30,11 @@ import java.util.Map;
 import java.util.Set;
 import java.util.stream.Collectors;
 
-import org.apache.tika.utils.ExceptionUtils;
 import org.reflections.Reflections;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.elasticsearch.annotations.Document;
 import org.springframework.data.elasticsearch.annotations.InnerField;
 import org.springframework.data.elasticsearch.annotations.MultiField;
 import org.springframework.stereotype.Component;
@@ -43,6 +43,7 @@ import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.fasterxml.jackson.databind.SerializationFeature;
 import com.wci.termhub.model.HasId;
 import com.wci.termhub.service.RootService;
 
@@ -69,7 +70,7 @@ public final class ModelUtility<T> {
   private static Map<Class<?>, Map<String, String>> sortFieldCache = new HashMap<>();
 
   /**
-   * Instantiates an empty {@link ConfigUtility}.
+   * Instantiates an empty {@link ModelUtility}.
    *
    * @param mapper the mapper
    */
@@ -224,7 +225,7 @@ public final class ModelUtility<T> {
 
   /**
    * Returns the graph for json. sample usage:
-   * 
+   *
    * @param <T> the
    * @param json the json
    * @param typeRef the type ref
@@ -246,8 +247,22 @@ public final class ModelUtility<T> {
    * @return the json for graph
    */
   public static String toJson(final Object object) {
+    return toJson(object, true);
+  }
+
+  /**
+   * To json.
+   *
+   * @param object the object
+   * @param formatted the formatted
+   * @return the string
+   */
+  public static String toJson(final Object object, final boolean formatted) {
     try {
-      return mapper.writeValueAsString(object);
+      if (formatted) {
+        return mapper.writeValueAsString(object);
+      }
+      return mapper.writer().without(SerializationFeature.INDENT_OUTPUT).writeValueAsString(object);
     } catch (final Exception e) {
       throw new RuntimeException(e);
     }
@@ -435,46 +450,6 @@ public final class ModelUtility<T> {
   }
 
   /**
-   * Returns the stack trace.
-   *
-   * @param t the t
-   * @return the stack trace
-   */
-  public static String getStackTrace(final Throwable t) {
-    return getStackTrace(t, false);
-  }
-
-  /**
-   * Returns the stack trace.
-   *
-   * @param t the t
-   * @param wciFlag the wci flag
-   * @return the stack trace
-   */
-  public static String getStackTrace(final Throwable t, final boolean wciFlag) {
-    final String stackTrace = ExceptionUtils.getStackTrace(t);
-    if (!wciFlag) {
-      return stackTrace;
-    }
-    final String[] lines = FieldedStringTokenizer.split(stackTrace, "\n");
-    final StringBuilder sb = new StringBuilder();
-    boolean found = false;
-    for (final String line : lines) {
-      final boolean wciLine = line.contains("com.wci.");
-      if (wciLine) {
-        found = true;
-      }
-      // if found and not a wci line, stop
-      if (found && !wciLine) {
-        sb.append("\t...");
-        break;
-      }
-      sb.append(line.replaceAll("\r", "")).append("\n");
-    }
-    return sb.toString();
-  }
-
-  /**
    * Gets the sort field.
    *
    * @param <T> the generic type
@@ -503,8 +478,8 @@ public final class ModelUtility<T> {
         final Type type = candidateField.getGenericType();
         if (type instanceof ParameterizedType) {
           final ParameterizedType pType = (ParameterizedType) type;
-          logger.debug("Raw type: " + pType.getRawType() + " - ");
-          logger.debug("Type args: " + pType.getActualTypeArguments()[0]);
+          logger.debug("Raw type: {} - ", pType.getRawType());
+          logger.debug("Type args: {}", pType.getActualTypeArguments()[0]);
           sortField = firstTerm + "." + getSortField((Class<?>) pType.getActualTypeArguments()[0],
               field.substring(field.indexOf('.') + 1));
           cacheSortField(clazz, field, sortField);
@@ -564,7 +539,7 @@ public final class ModelUtility<T> {
    * @return the declared field
    */
   private static Field getDeclaredField(final Class<?> clazz, final String field) {
-    final List<Field> fields = new ArrayList<Field>();
+    final List<Field> fields = new ArrayList<>();
     for (Class<?> c = clazz; c != null; c = c.getSuperclass()) {
       fields.addAll(Arrays.asList(c.getDeclaredFields()));
     }
@@ -592,19 +567,20 @@ public final class ModelUtility<T> {
     // Turn objects param into a set
     final Set<String> objectsSet = (objects == null || objects.isEmpty() || objects.equals("null"))
         ? new HashSet<>() : Arrays.asList(objects.split(",")).stream().collect(Collectors.toSet());
-    logger.info("  objects = " + objects);
+    logger.info("  objects = {}", objects);
 
     // Find indexed objects
     final Reflections reflections = new Reflections("com.wci.termhub.model");
     final Set<Class<?>> indexedSet = new HashSet<>(reflections
         .getTypesAnnotatedWith(org.springframework.data.elasticsearch.annotations.Document.class));
-    logger.info("  indexedSet = " + indexedSet);
+    logger.info("  indexedSet = {}", indexedSet);
 
     // Find managed classes
+    @SuppressWarnings("resource")
     final Set<EntityType<?>> entities = service.getEntityManager().getMetamodel().getEntities();
     final List<Class<?>> classes = entities.stream().map(EntityType::getJavaType)
         .filter(o -> o != null).collect(Collectors.toList());
-    logger.info("  classes = " + classes);
+    logger.info("  classes = {}", classes);
 
     // Ensure all objects to delete are in indexedSet, otherwise fail
     if (!objectsSet.isEmpty()) {
@@ -649,13 +625,13 @@ public final class ModelUtility<T> {
     // Turn objects param into a set
     final Set<String> objectsSet = (objects == null || objects.isEmpty() || objects.equals("null"))
         ? new HashSet<>() : Arrays.asList(objects.split(",")).stream().collect(Collectors.toSet());
-    logger.info("  objects = " + objects);
+    logger.info("  objects = {}", objects);
 
     // Find indexed objects
     final Reflections reflections = new Reflections("com.wci.termhub.model");
     final Set<Class<?>> indexedSet = new HashSet<>(reflections
         .getTypesAnnotatedWith(org.springframework.data.elasticsearch.annotations.Document.class));
-    logger.info("  indexedSet = " + indexedSet);
+    logger.info("  indexedSet = {}", indexedSet);
 
     // Ensure all objects to delete are in indexedSet, otherwise fail
     if (!objectsSet.isEmpty()) {
@@ -672,12 +648,30 @@ public final class ModelUtility<T> {
     }
 
     // Go through entity classes and identify indexed ones and any specific
-    // object
-    // ones
+    // object ones
     return indexedSet.stream()
         .filter(clazz -> objects == null || objects.isEmpty() || objects.equals("null")
             || objectsSet.contains(clazz.getSimpleName()))
         .map(c -> (Class<? extends HasId>) c).collect(Collectors.toList());
+
+  }
+
+  /**
+   * Gets the indexed objects.
+   *
+   * @return the indexed objects
+   */
+  @SuppressWarnings("unchecked")
+  public static List<Class<? extends HasId>> getIndexedObjects() {
+
+    // Scan for all @Document classes in com.wci.termhub.model
+    final Reflections reflections = new Reflections("com.wci.termhub.model");
+    final Set<Class<?>> documentClasses = reflections.getTypesAnnotatedWith(Document.class);
+
+    logger.info("Found @Document classes: {}", documentClasses);
+
+    return documentClasses.stream().map(c -> (Class<? extends HasId>) c)
+        .collect(Collectors.toList());
 
   }
 
@@ -692,7 +686,7 @@ public final class ModelUtility<T> {
         || f.getType().isAssignableFrom(Date.class) || f.getType().isAssignableFrom(Boolean.class)
         || f.getType().isAssignableFrom(Integer.class) || f.getType().isAssignableFrom(Long.class)
         || f.getType().isAssignableFrom(Float.class) || f.getType().isAssignableFrom(Double.class))
-        .collect(Collectors.toList());
+        .toList();
   }
 
   /**
@@ -704,27 +698,13 @@ public final class ModelUtility<T> {
   public static List<java.lang.reflect.Field> getAllFields(final Class<?> type) {
     final List<java.lang.reflect.Field> fields = new ArrayList<>();
     if (type.getSuperclass() != null) {
-      for (final java.lang.reflect.Field field : type.getDeclaredFields()) {
-        fields.add(field);
-      }
+      fields.addAll(Arrays.asList(type.getDeclaredFields()));
       fields.addAll(getAllFields(type.getSuperclass()));
       return fields;
     }
-    for (final java.lang.reflect.Field field : type.getDeclaredFields()) {
-      fields.add(field);
-    }
+    fields.addAll(Arrays.asList(type.getDeclaredFields()));
     return fields;
   }
-
-  // /**
-  // * Checks if is soft deleted.
-  // *
-  // * @param obj the obj
-  // * @return true, if is soft deleted
-  // */
-  // public static boolean isSoftDeleted(final HasSoftDelete obj) {
-  // return obj.getSoftDeleted() != null && obj.getSoftDeleted();
-  // }
 
   /**
    * Gets the annotation.
@@ -736,7 +716,7 @@ public final class ModelUtility<T> {
    */
   @SuppressWarnings("unchecked")
   public static <T> T getAnnotation(final Class<?> clazz, final Class<T> type) {
-    for (Annotation annotation : clazz.getAnnotations()) {
+    for (final Annotation annotation : clazz.getAnnotations()) {
       if (type.isAssignableFrom(annotation.getClass())) {
         return (T) annotation;
       }
